# TrustedGRUB2

./: .gitignore  CMakeLists.txt
grub-core/boot/i386/pc/: boot.S  diskboot.S
grub-core/disk/: luks.c
grub-core/kern/: dl.c  main.c
grub-core/normal/: menu.c
include/grub/: tpm.h
